disallowedauthzprefix.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  annotations:
    description: Requires that principals and namespaces in Istio `AuthorizationPolicy`
      rules don't have a prefix from a specified list. Introduced in ACM v1.4.0.
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"templates.gatekeeper.sh/v1beta1","kind":"ConstraintTemplate","metadata":{"annotations":{"description":"Requires that principals and namespaces in Istio `AuthorizationPolicy` rules don't have a prefix from a specified list. Introduced in ACM v1.4.0."},"labels":{"configmanagement.gke.io/configmanagement":"config-management","k8s-app":"kubernetes-config-management","policycontroller.configmanagement.gke.io":"true"},"name":"disallowedauthzprefix","ownerReferences":[{"apiVersion" [...]
  creationTimestamp: "2021-09-01T19:15:20Z"
  generation: 1
  labels:
    configmanagement.gke.io/configmanagement: config-management
    k8s-app: kubernetes-config-management
    policycontroller.configmanagement.gke.io: "true"
  managedFields:
  - apiVersion: templates.gatekeeper.sh/v1beta1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:description: {}
          f:kubectl.kubernetes.io/last-applied-configuration: {}
        f:labels:
          .: {}
          f:configmanagement.gke.io/configmanagement: {}
          f:k8s-app: {}
          f:policycontroller.configmanagement.gke.io: {}
        f:ownerReferences:
          .: {}
          k:{"uid":"e1113c3f-44c2-4a94-ad86-55422839f36f"}:
            .: {}
            f:apiVersion: {}
            f:blockOwnerDeletion: {}
            f:controller: {}
            f:kind: {}
            f:name: {}
            f:uid: {}
      f:spec:
        .: {}
        f:crd:
          .: {}
          f:spec:
            .: {}
            f:names:
              .: {}
              f:kind: {}
            f:validation:
              .: {}
              f:legacySchema: {}
              f:openAPIV3Schema:
                .: {}
                f:properties: {}
        f:targets: {}
    manager: Go-http-client
    operation: Update
    time: "2021-09-01T19:15:20Z"
  - apiVersion: templates.gatekeeper.sh/v1beta1
    fieldsType: FieldsV1
    fieldsV1:
      f:status:
        .: {}
        f:byPod: {}
        f:created: {}
    manager: gatekeeper
    operation: Update
    time: "2021-09-01T19:15:45Z"
  name: disallowedauthzprefix
  ownerReferences:
  - apiVersion: configmanagement.gke.io/v1
    blockOwnerDeletion: true
    controller: true
    kind: ConfigManagement
    name: config-management
    uid: e1113c3f-44c2-4a94-ad86-55422839f36f
  resourceVersion: "5283370"
  uid: b00f0e87-d8d7-471f-bcfd-f353da42ea1e
spec:
  crd:
    spec:
      names:
        kind: DisallowedAuthzPrefix
      validation:
        legacySchema: true
        openAPIV3Schema:
          properties:
            disallowedprefixes:
              items:
                type: string
              type: array
  targets:
  - rego: |
      package asm.guardrails.disallowedauthzprefix

      violation[{"msg": msg}] {
        p := input.review.object

        p.apiVersion == "security.istio.io/v1beta1"
        p.kind == "AuthorizationPolicy"

        rule := p.spec.rules[_]
        from := rule.from[_]

        principal := from.source.principals[_]
        parts := split(principal, "/")

        badprefix := input.parameters.disallowedprefixes[_]

        # check the final component of source.principals, the service account name
        startswith(parts[minus(count(parts), 1)], badprefix)

        msg := sprintf("source.principals '%v' cannot begin with '%v'", [principal, badprefix])
      }

      violation[{"msg": msg}] {
        p := input.review.object

        p.apiVersion == "security.istio.io/v1beta1"
        p.kind == "AuthorizationPolicy"

        rule := p.spec.rules[_]
        from := rule.from[_]

        namespace := from.source.namespaces[_]

        badprefix := input.parameters.disallowedprefixes[_]
        startswith(namespace, badprefix)

        msg := sprintf("source.namespaces '%v' cannot begin with '%v'", [namespace, badprefix])
      }
    target: admission.k8s.gatekeeper.sh
status:
  byPod:
  - id: gatekeeper-audit-79966db76-g9t4n
    observedGeneration: 1
    operations:
    - audit
    - status
    templateUID: b00f0e87-d8d7-471f-bcfd-f353da42ea1e
  - id: gatekeeper-controller-manager-78bb8f574f-qthrj
    observedGeneration: 1
    operations:
    - webhook
    templateUID: b00f0e87-d8d7-471f-bcfd-f353da42ea1e
  - id: gatekeeper-mutation-7696499fc9-4xr86
    observedGeneration: 1
    operations:
    - mutation-status
    - webhook
    templateUID: b00f0e87-d8d7-471f-bcfd-f353da42ea1e
  created: true
